--- a/readable/bootswatch.less
+++ b/readable/bootswatch.less
@@ -104,6 +104,13 @@ body {
 
 }
 
+@media (max-width: 980px) {
+	form.navbar-form, form.navbar-search {
+		border-top: 1px solid #D4D4D4;
+		border-bottom: 1px solid #D4D4D4;
+	}
+}
+
 .navbar-fixed-top {
 	position: static;
 }
